Compiladores/Trabalho/sintatico.output
Nonterminals useless in grammar

    define_registro
    campos
    declaracao_campos
    lista_campos


Rules useless in grammar

   49 define_registro: ε
   50                | T_DEF declaracao_campos T_FIMDEF T_IDENTIF

   51 campos: ε
   52       | declaracao_campos

   53 declaracao_campos: tipo lista_campos declaracao_campos
   54                  | tipo lista_variaveis

   55 lista_campos: T_IDENTIF lista_campos


State 64 conflicts: 2 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 9 shift/reduce
State 67 conflicts: 9 shift/reduce
State 68 conflicts: 2 shift/reduce
State 69 conflicts: 2 shift/reduce
State 70 conflicts: 2 shift/reduce
State 71 conflicts: 2 shift/reduce
State 72 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO
   11     | T_REGISTRO
   12     | T_DEF T_FIMDEF

   13 lista_variaveis: lista_variaveis T_IDENTIF
   14                | T_IDENTIF

   15 lista_comandos: ε
   16               | comando lista_comandos

   17 comando: entrada_saida
   18        | atribuicao
   19        | selecao
   20        | repeticao

   21 entrada_saida: entrada
   22              | saida

   23 entrada: T_LEIA T_IDENTIF

   24 saida: T_ESCREVA expressao

   25 $@3: ε

   26 atribuicao: T_IDENTIF $@3 T_ATRIB expressao

   27 $@4: ε

   28 $@5: ε

   29 selecao: T_SE expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

   30 $@6: ε

   31 $@7: ε

   32 repeticao: T_ENQTO $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

   33 expressao: expressao T_VEZES expressao
   34          | expressao T_DIV expressao
   35          | expressao T_MAIS expressao
   36          | expressao T_MENOS expressao
   37          | expressao T_MAIOR expressao
   38          | expressao T_MENOR expressao
   39          | expressao T_E expressao
   40          | expressao T_IGUAL expressao
   41          | expressao T_OU expressao
   42          | termo

   43 termo: T_IDENTIF
   44      | T_NUMERO
   45      | T_V
   46      | T_F
   47      | T_NAO termo
   48      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 13 14 23 26 43
    T_LEIA (262) 23
    T_ESCREVA (263) 24
    T_ENQTO (264) 32
    T_FACA (265) 32
    T_FIMENQTO (266) 32
    T_SE (267) 29
    T_SENAO (268) 29
    T_FIMSE (269) 29
    T_ATRIB (270) 26
    T_VEZES (271) 33
    T_DIV (272) 34
    T_MAIS (273) 35
    T_MENOS (274) 36
    T_MAIOR (275) 37
    T_MENOR (276) 38
    T_IGUAL (277) 40
    T_E (278) 39
    T_OU (279) 41
    T_V (280) 45
    T_F (281) 46
    T_NUMERO (282) 44
    T_NAO (283) 47
    T_ABRE (284) 48
    T_FECHA (285) 48
    T_LOGICO (286) 9
    T_INTEIRO (287) 10
    T_ENTAO (288) 29
    T_DEF (289) 12
    T_FIMDEF (290) 12
    T_REGISTRO (291) 11


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 3
        on right: 0
    $@1 (39)
        on left: 1
        on right: 3
    $@2 (40)
        on left: 2
        on right: 3
    cabecalho (41)
        on left: 4
        on right: 3
    variaveis (42)
        on left: 5 6
        on right: 3
    declaracao_variaveis (43)
        on left: 7 8
        on right: 6 7
    tipo (44)
        on left: 9 10 11 12
        on right: 7 8
    lista_variaveis (45)
        on left: 13 14
        on right: 7 8 13
    lista_comandos (46)
        on left: 15 16
        on right: 3 16 29 32
    comando (47)
        on left: 17 18 19 20
        on right: 16
    entrada_saida (48)
        on left: 21 22
        on right: 17
    entrada (49)
        on left: 23
        on right: 21
    saida (50)
        on left: 24
        on right: 22
    atribuicao (51)
        on left: 26
        on right: 18
    $@3 (52)
        on left: 25
        on right: 26
    selecao (53)
        on left: 29
        on right: 19
    $@4 (54)
        on left: 27
        on right: 29
    $@5 (55)
        on left: 28
        on right: 29
    repeticao (56)
        on left: 32
        on right: 20
    $@6 (57)
        on left: 30
        on right: 32
    $@7 (58)
        on left: 31
        on right: 32
    expressao (59)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 24 26 29 32 33 34 35 36 37 38 39 40 41 48
    termo (60)
        on left: 43 44 45 46 47 48
        on right: 42 47


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_LOGICO    shift, and go to state 6
    T_INTEIRO   shift, and go to state 7
    T_DEF       shift, and go to state 8
    T_REGISTRO  shift, and go to state 9

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 10
    declaracao_variaveis  go to state 11
    tipo                  go to state 12


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    9 tipo: T_LOGICO •

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: T_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 8

   12 tipo: T_DEF • T_FIMDEF

    T_FIMDEF  shift, and go to state 13


State 9

   11 tipo: T_REGISTRO •

    $default  reduce using rule 11 (tipo)


State 10

    3 programa: cabecalho variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 1 ($@1)

    $@1  go to state 14


State 11

    6 variaveis: declaracao_variaveis •

    $default  reduce using rule 6 (variaveis)


State 12

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 15

    lista_variaveis  go to state 16


State 13

   12 tipo: T_DEF T_FIMDEF •

    $default  reduce using rule 12 (tipo)


State 14

    3 programa: cabecalho variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  shift, and go to state 17


State 15

   14 lista_variaveis: T_IDENTIF •

    $default  reduce using rule 14 (lista_variaveis)


State 16

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   13 lista_variaveis: lista_variaveis • T_IDENTIF

    T_IDENTIF   shift, and go to state 18
    T_LOGICO    shift, and go to state 6
    T_INTEIRO   shift, and go to state 7
    T_DEF       shift, and go to state 8
    T_REGISTRO  shift, and go to state 9

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 19
    tipo                  go to state 12


State 17

    3 programa: cabecalho variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF  shift, and go to state 20
    T_LEIA     shift, and go to state 21
    T_ESCREVA  shift, and go to state 22
    T_ENQTO    shift, and go to state 23
    T_SE       shift, and go to state 24

    $default  reduce using rule 15 (lista_comandos)

    lista_comandos  go to state 25
    comando         go to state 26
    entrada_saida   go to state 27
    entrada         go to state 28
    saida           go to state 29
    atribuicao      go to state 30
    selecao         go to state 31
    repeticao       go to state 32


State 18

   13 lista_variaveis: lista_variaveis T_IDENTIF •

    $default  reduce using rule 13 (lista_variaveis)


State 19

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 7 (declaracao_variaveis)


State 20

   26 atribuicao: T_IDENTIF • $@3 T_ATRIB expressao

    $default  reduce using rule 25 ($@3)

    $@3  go to state 33


State 21

   23 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 34


State 22

   24 saida: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 41
    termo      go to state 42


State 23

   32 repeticao: T_ENQTO • $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

    $default  reduce using rule 30 ($@6)

    $@6  go to state 43


State 24

   29 selecao: T_SE • expressao T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 44
    termo      go to state 42


State 25

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  shift, and go to state 45


State 26

   16 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 20
    T_LEIA     shift, and go to state 21
    T_ESCREVA  shift, and go to state 22
    T_ENQTO    shift, and go to state 23
    T_SE       shift, and go to state 24

    $default  reduce using rule 15 (lista_comandos)

    lista_comandos  go to state 46
    comando         go to state 26
    entrada_saida   go to state 27
    entrada         go to state 28
    saida           go to state 29
    atribuicao      go to state 30
    selecao         go to state 31
    repeticao       go to state 32


State 27

   17 comando: entrada_saida •

    $default  reduce using rule 17 (comando)


State 28

   21 entrada_saida: entrada •

    $default  reduce using rule 21 (entrada_saida)


State 29

   22 entrada_saida: saida •

    $default  reduce using rule 22 (entrada_saida)


State 30

   18 comando: atribuicao •

    $default  reduce using rule 18 (comando)


State 31

   19 comando: selecao •

    $default  reduce using rule 19 (comando)


State 32

   20 comando: repeticao •

    $default  reduce using rule 20 (comando)


State 33

   26 atribuicao: T_IDENTIF $@3 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 47


State 34

   23 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 23 (entrada)


State 35

   43 termo: T_IDENTIF •

    $default  reduce using rule 43 (termo)


State 36

   45 termo: T_V •

    $default  reduce using rule 45 (termo)


State 37

   46 termo: T_F •

    $default  reduce using rule 46 (termo)


State 38

   44 termo: T_NUMERO •

    $default  reduce using rule 44 (termo)


State 39

   47 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 48


State 40

   48 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 49
    termo      go to state 42


State 41

   24 saida: T_ESCREVA expressao •
   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    $default  reduce using rule 24 (saida)


State 42

   42 expressao: termo •

    $default  reduce using rule 42 (expressao)


State 43

   32 repeticao: T_ENQTO $@6 • expressao T_FACA $@7 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 59
    termo      go to state 42


State 44

   29 selecao: T_SE expressao • T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE
   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58
    T_ENTAO  shift, and go to state 60


State 45

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 61


State 46

   16 lista_comandos: comando lista_comandos •

    $default  reduce using rule 16 (lista_comandos)


State 47

   26 atribuicao: T_IDENTIF $@3 T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 62
    termo      go to state 42


State 48

   47 termo: T_NAO termo •

    $default  reduce using rule 47 (termo)


State 49

   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao
   48 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58
    T_FECHA  shift, and go to state 63


State 50

   33 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 64
    termo      go to state 42


State 51

   34 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 65
    termo      go to state 42


State 52

   35 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 66
    termo      go to state 42


State 53

   36 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 67
    termo      go to state 42


State 54

   37 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 68
    termo      go to state 42


State 55

   38 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 69
    termo      go to state 42


State 56

   40 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 70
    termo      go to state 42


State 57

   39 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 71
    termo      go to state 42


State 58

   41 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 72
    termo      go to state 42


State 59

   32 repeticao: T_ENQTO $@6 expressao • T_FACA $@7 lista_comandos T_FIMENQTO
   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_FACA   shift, and go to state 73
    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58


State 60

   29 selecao: T_SE expressao T_ENTAO • $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    $default  reduce using rule 27 ($@4)

    $@4  go to state 74


State 61

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2 •

    $default  reduce using rule 3 (programa)


State 62

   26 atribuicao: T_IDENTIF $@3 T_ATRIB expressao •
   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    $default  reduce using rule 26 (atribuicao)


State 63

   48 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 48 (termo)


State 64

   33 expressao: expressao • T_VEZES expressao
   33          | expressao T_VEZES expressao •
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53

    T_MAIS    [reduce using rule 33 (expressao)]
    T_MENOS   [reduce using rule 33 (expressao)]
    $default  reduce using rule 33 (expressao)


State 65

   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   34          | expressao T_DIV expressao •
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53

    T_MAIS    [reduce using rule 34 (expressao)]
    T_MENOS   [reduce using rule 34 (expressao)]
    $default  reduce using rule 34 (expressao)


State 66

   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   35          | expressao T_MAIS expressao •
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    T_VEZES   [reduce using rule 35 (expressao)]
    T_DIV     [reduce using rule 35 (expressao)]
    T_MAIS    [reduce using rule 35 (expressao)]
    T_MENOS   [reduce using rule 35 (expressao)]
    T_MAIOR   [reduce using rule 35 (expressao)]
    T_MENOR   [reduce using rule 35 (expressao)]
    T_IGUAL   [reduce using rule 35 (expressao)]
    T_E       [reduce using rule 35 (expressao)]
    T_OU      [reduce using rule 35 (expressao)]
    $default  reduce using rule 35 (expressao)


State 67

   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   36          | expressao T_MENOS expressao •
   37          | expressao • T_MAIOR expressao
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
    T_MAIOR  shift, and go to state 54
    T_MENOR  shift, and go to state 55
    T_IGUAL  shift, and go to state 56
    T_E      shift, and go to state 57
    T_OU     shift, and go to state 58

    T_VEZES   [reduce using rule 36 (expressao)]
    T_DIV     [reduce using rule 36 (expressao)]
    T_MAIS    [reduce using rule 36 (expressao)]
    T_MENOS   [reduce using rule 36 (expressao)]
    T_MAIOR   [reduce using rule 36 (expressao)]
    T_MENOR   [reduce using rule 36 (expressao)]
    T_IGUAL   [reduce using rule 36 (expressao)]
    T_E       [reduce using rule 36 (expressao)]
    T_OU      [reduce using rule 36 (expressao)]
    $default  reduce using rule 36 (expressao)


State 68

   33 expressao: expressao • T_VEZES expressao
   34          | expressao • T_DIV expressao
   35          | expressao • T_MAIS expressao
   36          | expressao • T_MENOS expressao
   37          | expressao • T_MAIOR expressao
   37          | expressao T_MAIOR expressao •
   38          | expressao • T_MENOR expressao
   39          | expressao • T_E expressao
   40          | expressao • T_IGUAL expressao
   41          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 50
    T_DIV    shift, and go to state 51
    T_MAIS   shift, and go to state 52
    T_MENOS  shift, and go to state 53
